--- a/sagi.html
+++ b/sagi.html
@@ -68,18 +68,18 @@
         </p>
           <div id="menu">
             <ul>
-              <li><a href="Nise_Brand.html"><span class="akamozi">偽ブランド品詐欺・偽販売サイト詐欺</span><br><br>インターネットサイトで購入したブランド品が粗悪品、偽物であったり、商品を送ってこなかったりするなどという詐欺</a></li>
-              <li><a href="Twitter_Sagi.html"><span class="akamozi">アカウント乗っ取り</span><br><br>スパムの場合女性からの相談や、ギャンブルやお金儲けなどの話から、出会い系サイトへの誘導する詐欺</a></li>
-              <li><a href="Fishing_sagi.html"><span class="akamozi">フィッシング詐欺</span><br><br>有名企業の名前をかたって、インターネットサービスのログインIDやパスワードを盗む詐欺</a></li>
-              <li><a href="Credit.html"><span class="akamozi">スマホ決済・クレジットカード不正利用</span><br><br>システムに登録した個人情報を盗まれ、成りすましや不正決済などの被害に遭う詐欺</a></li>
+              <li><a href="nisebrand.html"><span class="akamozi">偽ブランド品詐欺・偽販売サイト詐欺</span><br><br>インターネットサイトで購入したブランド品が粗悪品、偽物であったり、商品を送ってこなかったりするなどという詐欺</a></li>
+              <li><a href="account.html"><span class="akamozi">アカウント乗っ取り</span><br><br>スパムの場合女性からの相談や、ギャンブルやお金儲けなどの話から、出会い系サイトへの誘導する詐欺</a></li>
+              <li><a href="fishing.html"><span class="akamozi">フィッシング詐欺</span><br><br>有名企業の名前をかたって、インターネットサービスのログインIDやパスワードを盗む詐欺</a></li>
+              <li><a href="credit.html"><span class="akamozi">スマホ決済・クレジットカード不正利用</span><br><br>システムに登録した個人情報を盗まれ、成りすましや不正決済などの被害に遭う詐欺</a></li>
             </ul>
           </div>
           <div id="menu2">
             <ul>
-              <li><a href="Nise_soft.html"><span class="akamozi">セキュリティソフト等の偽警告</span><br><br>Webサイトを閲覧中に突然表示される偽物の警告（フェイクアラート）</a></li>
-              <li><a href="OneClick.html"><span class="akamozi">ワンクリック詐欺</span><br><br>ウェブページ上の特定のサイトや勝手に送られた電子メールに記載されているURLなどをクリックすると、契約したことになり多額の料金の支払を求める詐欺</a></li>
-              <li><a href="Ransomware.html"><span class="akamozi">ランサムウェア</span><br><br>パソコンやスマートフォンをロックして身代金を要求</a></li>
-              <li><a href="Covid19.html"><span class="akamozi">コロナウイルスに関わる詐欺</span><br><br>新型コロナウイルス感染症関連詐欺のよくある手口 by Google</a></li>
+              <li><a href="fakealert.html"><span class="akamozi">セキュリティソフト等の偽警告</span><br><br>Webサイトを閲覧中に突然表示される偽物の警告（フェイクアラート）</a></li>
+              <li><a href="oneclick.html"><span class="akamozi">ワンクリック詐欺</span><br><br>ウェブページ上の特定のサイトや勝手に送られた電子メールに記載されているURLなどをクリックすると、契約したことになり多額の料金の支払を求める詐欺</a></li>
+              <li><a href="ransomware.html"><span class="akamozi">ランサムウェア</span><br><br>パソコンやスマートフォンをロックして身代金を要求</a></li>
+              <li><a href="covid19.html"><span class="akamozi">コロナウイルスに関わる詐欺</span><br><br>新型コロナウイルス感染症関連詐欺のよくある手口 by Google</a></li>
             </ul>
           </div>
         <div style="margin: 2em 0;">
