--- a/quiz.html
+++ b/quiz.html
@@ -7,8 +7,8 @@
 
       <meta charset="UTF-8">
       <title>暗号とセキュリティ</title>
-      <link href="C:\Users\b1018086\Desktop\project_site\stylesheet\reset.css" rel="stylesheet" type="text/css">
-      <link href="C:\Users\b1018086\Desktop\project_site\stylesheet\style_sagi.css" rel="stylesheet" type="text/css">
+      <link href="reset.css" rel="stylesheet" type="text/css">
+      <link href="style_sagi.css" rel="stylesheet" type="text/css">
 ​
 ​
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.4/css/all.css">
@@ -21,7 +21,7 @@
         <h1><a href="sagi.html" class="site-logo"><img src="img/キャプチャ.jpg" alt="暗号とセキュリティ"></a></h1>
         <nav class="gnav">
             <ul class="gnav__menu">
-              <li class="gnav__menu__item"><a href="#" class="btn00">Top</a></li>
+              <li class="gnav__menu__item"><a href="https://project15-security.github.io/netsagi/sagi.html" class="btn00">Top</a></li>
               <li class="gnav__menu__item"><a href="#" class="btn00">セキュリティソフト</a></li>
               <li class="gnav__menu__item"><a href="#" class="btn00">データベース</a></li>
             </ul>
