--- a/fishing.html
+++ b/fishing.html
@@ -14,8 +14,8 @@
       </script> -->
       <meta charset="UTF-8">
       <title>暗号とセキュリティ</title>
-      <link href="C:\Users\b1018086\Desktop\project_site\stylesheet\reset.css" rel="stylesheet" type="text/css">
-      <link href="C:\Users\b1018086\Desktop\project_site\stylesheet\style_sagi.css" rel="stylesheet" type="text/css">
+      <link href="reset.css" rel="stylesheet" type="text/css">
+      <link href="style_sagi.css" rel="stylesheet" type="text/css">
 ​
 ​
           <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.4/css/all.css">
@@ -29,9 +29,9 @@
             <h1><a href="sagi.html" class="site-logo"><img src="img/キャプチャ.jpg" alt="暗号とセキュリティ"></a></h1>
             <nav class="gnav">
                 <ul class="gnav__menu">
-                  <li class="gnav__menu__item"><a href="Top.html">About</a></li>
-                  <li class="gnav__menu__item"><a href="#">メールサーバー班</a></li>
-                  <li class="gnav__menu__item"><a href="Sagi.html">セキュリティ意識調査班</a></li>
+                  <li class="gnav__menu__item"><a href="sagi.html" class="btn00">About</a></li>
+                  <li class="gnav__menu__item"><a href="#" class="btn00">メールサーバー班</a></li>
+                  <li class="gnav__menu__item"><a href="Sagi.html" class="btn00">セキュリティ意識調査班</a></li>
                 </ul>
               </nav>
             </header>
@@ -73,7 +73,7 @@
 
                   <div id="menu3">
                     <ul>
-                      <li><a href="Quiz.html"><span class="akamozi">フィッシング詐欺</span><br><br>のクイズに挑戦する！</a></li>
+                      <li><a href="quiz.html"><span class="akamozi">フィッシング詐欺</span><br><br>のクイズに挑戦する！</a></li>
                     </ul>
                   </div>
                   <p></p>
