--- a/account.html
+++ b/account.html
@@ -29,9 +29,9 @@
           <h1><a href="sagi.html" class="site-logo"><img src="img/キャプチャ.jpg" alt="暗号とセキュリティ"></a></h1>
           <nav class="gnav">
               <ul class="gnav__menu">
-                <li class="gnav__menu__item"><a href="sagi.html">About</a></li>
-                <li class="gnav__menu__item"><a href="#">メールサーバー班</a></li>
-                <li class="gnav__menu__item"><a href="Sagi.html">セキュリティ意識調査班</a></li>
+                <li class="gnav__menu__item"><a href="sagi.html" class="btn00">Top</a></li>
+                <li class="gnav__menu__item"><a href="#" class="btn00">セキュリティソフト</a></li>
+                <li class="gnav__menu__item"><a href="#" class="btn00">データベース</a></li>
               </ul>
             </nav>
           </header>
