--- a/sagi.html
+++ b/sagi.html
@@ -24,7 +24,7 @@
     </head>
     <body>
       <header class="site-header">
-        <h1><a href="sagi.html" class="site-logo"><img src="img/キャプチャ.jpg" alt="暗号とセキュリティ"></a></h1>
+        <h1><a href="sagi.html" class="site-logo"><img src="img/キャプチャ.JPG" alt="暗号とセキュリティ"></a></h1>
         <nav class="gnav">
           <ul class="gnav__menu">
             <li class="gnav__menu__item"><a href="#" class="btn00">Top</a></li>
