--- a/fishing.html
+++ b/fishing.html
@@ -67,7 +67,7 @@
                   <font size="3">出典:<a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.jabank.org%2Fattention%2Fphishing%2F&psig=AOvVaw2cbLrh-LglhzUpmjCBDdRr&ust=1603524166344000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCLjUq4OfyuwCFQAAAAAdAAAAABAR"target="_blank">JAバンク「フィッシング詐欺にご注意ください」</a></font><br><br>
                     <br><br>
                     <span class="koumoku">実際に起きた事件</span><br>
-                <a href ="https://news.yahoo.co.jp/byline/ohmototakashi/20191025-00148216/" target="_blank">大手金融機関を装うフィッシング詐欺</a><br>
+                <a href ="https://news.yahoo.co.jp/byline/ohmototakashi/20191025-00148216/" target="_blank">大手金融機関を装うフィッシング詐欺</a>
 
                   </p></div>
 
@@ -75,8 +75,7 @@
                     <ul>
                       <li><a href="quiz.html"><span class="akamozi">フィッシング詐欺</span><br><br>のクイズに挑戦する！</a></li>
                     </ul>
-                  </div>
-                  <p></p>
+               
                   </div>
                 <div style="margin: 2em 0;">
                   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
