--- a/fishing.html
+++ b/fishing.html
@@ -29,9 +29,9 @@
             <h1><a href="sagi.html" class="site-logo"><img src="img/キャプチャ.jpg" alt="暗号とセキュリティ"></a></h1>
             <nav class="gnav">
                 <ul class="gnav__menu">
-                  <li class="gnav__menu__item"><a href="sagi.html" class="btn00">About</a></li>
-                  <li class="gnav__menu__item"><a href="#" class="btn00">メールサーバー班</a></li>
-                  <li class="gnav__menu__item"><a href="Sagi.html" class="btn00">セキュリティ意識調査班</a></li>
+                  <li class="gnav__menu__item"><a href="sagi.html" class="btn00">Top</a></li>
+                  <li class="gnav__menu__item"><a href="#" class="btn00">セキュリティソフト</a></li>
+                  <li class="gnav__menu__item"><a href="#" class="btn00">データベース</a></li>
                 </ul>
               </nav>
             </header>
@@ -67,8 +67,7 @@
                   <font size="3">出典:<a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.jabank.org%2Fattention%2Fphishing%2F&psig=AOvVaw2cbLrh-LglhzUpmjCBDdRr&ust=1603524166344000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCLjUq4OfyuwCFQAAAAAdAAAAABAR"target="_blank">JAバンク「フィッシング詐欺にご注意ください」</a></font><br><br>
                     <br><br>
                     <span class="koumoku">実際に起きた事件</span><br>
-                <a href ="https://news.yahoo.co.jp/byline/ohmototakashi/20191025-00148216/" target="_blank">大手金融機関を装うフィッシング詐欺</a>
-
+                Yahoo!ニュース：<a href ="https://news.yahoo.co.jp/byline/ohmototakashi/20191025-00148216/" target="_blank">「大手金融機関を装う、フィッシング詐欺が急増。9月は前月比4倍の事犯発生。」</a>
                   </p></div>
 
                   <div id="menu3">
