--- a/account.html
+++ b/account.html
@@ -71,17 +71,16 @@
             <br><br>
 
             <img src="img/akaunto.jpg" width="290" height="516" alt=""><br>
-            <font size="3">出典：<a href="https://image.itmedia.co.jp/news/articles/1411/28/haru_linesec.jpg"target="_blank">多発するアカウント乗っ取り被害</a></font><br><br>
+            <font size="3">出典：ITmedia：<a href="https://www.itmedia.co.jp/mobile/articles/1407/28/news093.html" target="_blank">「多発する「LINE」のアカウント乗っ取り被害　その背景にあるもの」</a></font><br><br>
 
             <span class="koumoku">実際に起きた事件</span><br>
-              <a href="https://news.yahoo.co.jp/articles/11cb6bb2556fecd5cff7b654018a0c163d465d08"target="_blank">有名人のTwitterアカウントを乗っ取り逮捕</a><br>
+              Yahoo!ニュース：<a href="https://news.yahoo.co.jp/articles/11cb6bb2556fecd5cff7b654018a0c163d465d08" target="_blank">「有名人のTwitterアカウントを乗っ取り逮捕」</a>
             </p></div>
+              
             <div id="menu3">
               <ul>
                 <li><a href="quiz.html"><span class="akamozi">アカウント乗っ取り</span><br><br>のクイズに挑戦する！</a></li>
               </ul>
-            </div>
-            <p></p>
             </div>
 
               <div style="margin: 2em 0;">
