--- a/nisebrand.html
+++ b/nisebrand.html
@@ -61,12 +61,12 @@
                 <span class="koumoku">対策</span><br>
                 インターネットで販売サイトを利用するときは、そのサイトが<span class="hutomozi">安全と言い切れるかどうか隅々まで注意深く見ましょう</span>。消費者庁では、以下のようなサイトには気をつけるよう注意喚起をしています。<br><br>
                 <img src="img/NiseBrand01.png" width="851" height="480" alt=""><br>
-                <font size="3">出典：<a href="https://www.caa.go.jp/policies/policy/consumer_policy/caution/internet/trouble/internet.html" target="_blank">消費者庁 「インターネット通販トラブル」</a></font><br><br>
+                <font size="3">出典：消費者庁　<a href="https://www.caa.go.jp/policies/policy/consumer_policy/caution/internet/trouble/internet.html" target="_blank">「インターネット通販トラブル」</a></font><br><br>
                 これ以外にも、<span class="hutomozi">前払いのみの対応</span>であったり、<span class="hutomozi">個人情報保護方針のリンク先が書かれていない</span>など、小さな違和感があります。これは意識して凝視しなければ気づくことは難しいです。「大丈夫だろう」ではなく、「怪しくないだろうか」と疑ってかかるのも被害に遭わないためには大切です。
                 <br><br>
                 <span class="koumoku">実際に起きた事件</span><br>
-                <a href="https://www.sankei.com/affairs/news/201021/afr2010210017-n1.html" target="_blank">産経新聞　「SNSに広告掲載し偽ブランド品販売、容疑で中国籍の男２人を再逮捕」</a><br>
-                <a href="https://mainichi.jp/articles/20201021/ddl/k03/040/027000c" target="_blank">毎日新聞　「偽ブランド品を販売　商標法違反容疑、盛岡市職員を逮捕　／岩手」</a>
+                産経新聞：<a href="https://www.sankei.com/affairs/news/201021/afr2010210017-n1.html" target="_blank">「SNSに広告掲載し偽ブランド品販売、容疑で中国籍の男２人を再逮捕」</a><br>
+                毎日新聞：<a href="https://mainichi.jp/articles/20201021/ddl/k03/040/027000c" target="_blank">「偽ブランド品を販売　商標法違反容疑、盛岡市職員を逮捕　／岩手」</a>
               </p></div>
 
               <div id="menu3">
