--- a/account.html
+++ b/account.html
@@ -70,7 +70,7 @@
             自分のアカウントが乗っ取られたら身近な友達に悪意を持った第三者が自分になりすましてメッセージを送ってウェブマネーを要求するという事件も起きているので気をつけましょう。<br>
             <br><br>
 
-            <img src="img/akaunto.jpg" width="290" height="516" alt=""><br>
+            <img src="img/account.jpg" width="290" height="516" alt=""><br>
             <font size="3">出典：ITmedia：<a href="https://www.itmedia.co.jp/mobile/articles/1407/28/news093.html" target="_blank">「多発する「LINE」のアカウント乗っ取り被害　その背景にあるもの」</a></font><br><br>
 
             <span class="koumoku">実際に起きた事件</span><br>
