--- a/quiz.html
+++ b/quiz.html
@@ -61,9 +61,9 @@
         <p class="Quiz_title" id="Quiz1">偽ブランド品詐欺・偽販売サイト詐欺</p>
         <p class="mondai">
           以下のA～Cのショッピングサイトのうち、どのサイトから商品を購入したら良いでしょうか？<br><br>
-          <img src="img/NiseBrand_QuizF1.png" width="479.5" height="359.5" alt="">
-          <img src="img/NiseBrand_QuizT.png" width="479.5" height="359.5" alt="">
-          <img src="img/NiseBrand_QuizF2.png" width="479.5" height="359.5" alt=""><br>
+          <img src="img/nisebrand_quiz1.png" width="479.5" height="359.5" alt="">
+          <img src="img/nisebrand_quiz2.png" width="479.5" height="359.5" alt="">
+          <img src="img/nisebrand_quiz3.png" width="479.5" height="359.5" alt=""><br>
 
         </p>
         <!--解答ボタン-->
@@ -87,7 +87,7 @@
               <br><br><br>
               もし不正解だったら... もう一度サイトを読んで学びましょう！
               <br><br>
-              <a href="Nise_Brand.html">偽ブランド品詐欺・偽販売サイト詐欺</a>
+              <a href="nisebrand.html">偽ブランド品詐欺・偽販売サイト詐欺</a>
             </p>
             <!--ここまで-->
           </div>
@@ -120,7 +120,7 @@
               <br><br><br>
               もし不正解だったら... もう一度サイトを読んで学びましょう！
               <br><br>
-              <a href="Twitter_Sagi.html">アカウント乗っ取り</a>
+              <a href="account.html">アカウント乗っ取り</a>
             </p>
             <!--ここまで-->
           </div>
@@ -148,7 +148,7 @@
               <br><br><br>
               もし不正解だったら... もう一度サイトを読んで学びましょう！
               <br><br>
-              <a href="Fishing_sagi.html">フィッシング詐欺</a>
+              <a href="fishing.html">フィッシング詐欺</a>
             </p>
             <!--ここまで-->
           </div>
@@ -179,7 +179,7 @@
               <br><br><br>
               もし不正解だったら... もう一度サイトを読んで学びましょう！
               <br><br>
-              <a href="Credit.html">スマホ決済・クレジットカード不正利用</a>
+              <a href="credit.html">スマホ決済・クレジットカード不正利用</a>
             </p>
             <!--ここまで-->
           </div>
@@ -187,7 +187,7 @@
 
         <p class="Quiz_title" id="Quiz5">セキュリティソフト等の偽警告</p>
         <p class="mondai">・この画面が表示されたら、あなたはどうしますか？<br>
-        <img src="img/fakealeart.png"><br>
+        <img src="img/fakealert.png"><br>
         <font size="3">出典：トレンドマイクロ　<a href="https://blog.trendmicro.co.jp/archives/20213" target="_blank">Webを見ていたら突然の「システム破損」「ウイルス感染」表示、再び活発化した偽警告</a><br></font><br><br>
         A. 画面の指示に従う<br>
         B. ブラウザを閉じる<br>
@@ -214,7 +214,7 @@
               <br><br><br>
               もし不正解だったら... もう一度サイトを読んで学びましょう！
               <br><br>
-              <a href="Nise_soft.html">セキュリティソフト等の偽警告</a>
+              <a href="fakealert.html">セキュリティソフト等の偽警告</a>
             </p>
             <!--ここまで-->
           </div>
@@ -245,7 +245,7 @@
               <br><br><br>
               もし不正解だったら... もう一度サイトを読んで学びましょう！
               <br><br>
-              <a href="Nise_soft.html">セキュリティソフト等の偽警告</a>
+              <a href="fakealert.html">セキュリティソフト等の偽警告</a>
             </p>
             <!--ここまで-->
           </div>
@@ -254,7 +254,7 @@
 
         <p class="Quiz_title" id="Quiz6">ワンクリック詐欺</p>
         <p class="mondai">・ネットサーフィンをしていたらこんな画面が出てきました。あなただったらどの行動をとりますか？
-          <img src="img/oneclick.jpg"><br>
+          <img src="img/oneclick_quiz.jpg"><br>
           <font size="3">出典：Norton<a href="https://japan.norton.com/smartphone-oneclick-fraud-1940"target="_blank">スマートフォンでのワンクリック詐欺とその対処法</a><br></font><br><br>
           １　身に覚えがないので画面に出てきた連絡先に問い合わせて話をしてみる。<br>
           ２　怖くなり早く画面を消したいので言われた通りにお金を振り込む。<br>
@@ -281,7 +281,7 @@
               <br><br><br>
               もし不正解だったら... もう一度サイトを読んで学びましょう！
               <br><br>
-              <a href="OneClick.html">ワンクリック詐欺</a>
+              <a href="oneclick.html">ワンクリック詐欺</a>
             </p>
             <!--ここまで-->
           </div>
@@ -316,7 +316,7 @@
               <br><br><br>
               もし不正解だったら... もう一度サイトを読んで学びましょう！
               <br><br>
-              <a href="Ransomware.html">ランサムウェア</a>
+              <a href="ransomware.html">ランサムウェア</a>
             </p>
             <!--ここまで-->
           </div>
@@ -349,7 +349,7 @@
               <br><br><br>
               もし不正解だったら... もう一度サイトを読んで学びましょう！
               <br><br>
-              <a href="Covid19.html">コロナウイルスに関わる詐欺</a>
+              <a href="covid19.html">コロナウイルスに関わる詐欺</a>
             </p>
             <!--ここまで-->
           </div>
