--- a/fakealert.html
+++ b/fakealert.html
@@ -55,7 +55,7 @@
                 <p class="maegaki"><span class="koumoku">概要</span><br>
                   突然、「あなたのスマートフォン（パソコン）がウイルスに感染しています！今すぐセキュリティソフトをインストールしましょう！」という<span class="hutomozi">偽の警告画面（フェイクアラート）が表示される</span>詐欺です。これは偽警告と呼ばれ、偽のセキュリティソフトをインストールをさせることで<span class="hutomozi">個人情報や有料契約を狙っています</span>。他にも、「性能が低下しています」「ディスクの空き容量がありません」など警告文は様々です。
                   <img src="img/NiseSoft01.png" width="1058" height="604" alt=""><br>
-                  <font size="3">出典：<a href="https://www.ipa.go.jp/security/anshin/mgdayori20160711.html" target="_blank">IPA(情報処理推進機構) 「安心相談窓口たより」</a></font>
+                  <font size="3">出典：IPA(情報処理推進機構)　<a href="https://www.ipa.go.jp/security/anshin/mgdayori20160711.html" target="_blank">「安心相談窓口たより」</a></font>
                   <br><br>
                   <span class="koumoku">手口</span><br>
                   上述のように、実際の警告画面に近い偽の画面を突如として表示することで、<span class="hutomozi">ユーザの不安を煽り、冷静な判断力を低下</span>させます。画面の指示通りにソフトをインストールしたり、画面内の電話番号へ問い合わせてしまうと、<span class="hutomozi">個人情報の流出や、有料のソフトやサポート契約を強いられる原因</span>になります。また、ネット広告と、その広告を表示させているWebサイトは完全に別の仕組みで動作している場合があります。そのため、<span class="hutomozi">Webサイト自体が安全だからといって安心できるわけではありません</span>。
@@ -64,13 +64,13 @@
                   最も良い手段は、<span class="hutomozi">無視すること</span>です。偽警告で表示されたようなウイルス感染や不具合などは実際には起きていないので、気にせず無視しましょう。この際、下の画像のように、偽警告の画面に触れないよう、<span class="hutomozi">ブラウザのタブ、もしくはブラウザ自体を終了</span>しましょう。
                   <br>
                   <img src="img/NiseSoft02.jpg" width="885.5" height="651.7" alt=""><br>
-                  <font size="3">出典：<a href="https://cybersecurity-jp.com/column/35533#i-2" target="_blank">CyberSecurity.com 「偽警告とは？仕組みや種類、セキュリティ対策について徹底解説」</a></font>
+                  <font size="3">出典：CyberSecurity.com　<a href="https://cybersecurity-jp.com/column/35533#i-2" target="_blank">「偽警告とは？仕組みや種類、セキュリティ対策について徹底解説」</a></font>
                   <br><br>
                   また、<span class="hutomozi">自身が使用しているセキュリティソフトの警告画面を知っておく</span>と、偽物だという事がすぐに見抜けるはずです。実際の警告画面では、ユーザの不安を煽るような行為はされないので、<span class="hutomozi">焦らず冷静になることが重要</span>です。なお、偽警告のプログラムは<span class="hutomozi">グレーウェア（不利益をもたらすが不正とは言い切れないもの）</span>に分類される場合があるため、ウイルス検出ソフトでスキャンして問題が無かったからと言って、100%安全と断言できるわけではないので注意してください。
                   <br><br>
                   <span class="koumoku">実際に起きた事件</span><br>
-                  <a href="https://this.kiji.is/644350051517793377?c=174761113988793844" target="_blank">長崎新聞　「「サポート詐欺」注意　長崎県内女性2人が被害　ウイルス感染の偽警告」</a><br>
-                  <a href="https://www.kochinews.co.jp/article/378999/" target="_blank">高知新聞　「ＰＣに｢ウイルス感染｣の偽警告　６月県内で５人計６４万円被害」</a>
+                  長崎新聞：<a href="https://this.kiji.is/644350051517793377?c=174761113988793844" target="_blank">「「サポート詐欺」注意　長崎県内女性2人が被害　ウイルス感染の偽警告」</a><br>
+                  高知新聞：<a href="https://www.kochinews.co.jp/article/378999/" target="_blank">「ＰＣに｢ウイルス感染｣の偽警告　６月県内で５人計６４万円被害」</a>
               </p></div>
 
               <div id="menu3">
