--- a/ransomware.html
+++ b/ransomware.html
@@ -58,7 +58,7 @@
                   <span class="koumoku">手口</span><br>
                   <span class="hutomozi">不審なメール等に記載されたURLや添付ファイルから感染</span>し、感染してしまうと内部のデータが暗号化されて使えなくなったり、操作不能の状態に陥ってしまいます。また、感染した端末だけでなく、<span class="hutomozi">その端末とネットを介して繋がっている他のデバイスも感染のおそれ</span>があります。そして、画面には<span class="hutomozi">解除するために身代金を要求</span>する画面が表示されます。このとき、画面に支払いの制限時間が記載されていたり、支払わなければ永久に回復しないなど<span class="hutomozi">ユーザを不安にさせる脅迫的な文章</span>が記載されていることもあります。<br>
                   <img src="img/Ransomware01.jpg" width="650" height="400" alt=""><br>
-                  <font size="3">出典：<a href="https://www.police.pref.osaka.lg.jp/seikatsu/saiba/cyber_cyuikanki/6936.html" target="_blank">大阪府警察 「ランサムウェアにご注意！」</a></font>
+                  <font size="3">出典：大阪府警察　<a href="https://www.police.pref.osaka.lg.jp/seikatsu/saiba/cyber_cyuikanki/6936.html" target="_blank">「ランサムウェアにご注意！」</a></font>
                   <br><br>
                   <span class="koumoku">対策</span><br>
                   ランサムウェアの対策は非常に難しいです。常日頃から、<span class="hutomozi">データのバックアップをこまめに取ったり</span>、<span class="hutomozi">不審なメールを開かない</span>ようにするなど、危機感をもつことが重要です。また、セキュリティソフトのアップデートを怠っていると、その脆弱性の隙を突いてくる場合もあるため、<span class="hutomozi">常に最新版に更新する</span>ことを心がけましょう。<br>
