--- a/quiz.html
+++ b/quiz.html
@@ -187,7 +187,7 @@
 
         <p class="Quiz_title" id="Quiz5">セキュリティソフト等の偽警告</p>
         <p class="mondai">・この画面が表示されたら、あなたはどうしますか？<br>
-        <img src="img/fakealert.png"><br>
+        <img src="img/fakealert_quiz.png"><br>
         <font size="3">出典：トレンドマイクロ　<a href="https://blog.trendmicro.co.jp/archives/20213" target="_blank">Webを見ていたら突然の「システム破損」「ウイルス感染」表示、再び活発化した偽警告</a><br></font><br><br>
         A. 画面の指示に従う<br>
         B. ブラウザを閉じる<br>
@@ -255,10 +255,10 @@
         <p class="Quiz_title" id="Quiz6">ワンクリック詐欺</p>
         <p class="mondai">・ネットサーフィンをしていたらこんな画面が出てきました。あなただったらどの行動をとりますか？
           <img src="img/oneclick_quiz.jpg"><br>
-          <font size="3">出典：Norton<a href="https://japan.norton.com/smartphone-oneclick-fraud-1940"target="_blank">スマートフォンでのワンクリック詐欺とその対処法</a><br></font><br><br>
-          １　身に覚えがないので画面に出てきた連絡先に問い合わせて話をしてみる。<br>
-          ２　怖くなり早く画面を消したいので言われた通りにお金を振り込む。<br>
-          ３　よくわからないので履歴を削除してブラウザを閉じる。<br>
+          <font size="3">出典：Norton　<a href="https://japan.norton.com/smartphone-oneclick-fraud-1940"target="_blank"> スマートフォンでのワンクリック詐欺｜正しい対処方法と予防</a><br></font><br><br>
+          A：身に覚えがないので画面に出てきた連絡先に問い合わせて話をしてみる。<br>
+          B：怖くなり早く画面を消したいので言われた通りにお金を振り込む。<br>
+          C：よくわからないので履歴を削除してブラウザを閉じる。<br>
         </p>
         <!--解答ボタン-->
         <div class="hidden_box">
@@ -268,10 +268,10 @@
             <!--非表示ここから-->
             <p answer>
               <!--正解-->
-              正解は... <span class="aomozi">3</span>
+              正解は... <span class="aomozi">C</span>
               <br><br>
               <!--正解の解説-->
-              詐欺サイトはさもユーザーの個人情報を取得したかのように装い、期日内に支払わないと「請求額が高額になる」「身元調査を行う」<br>「裁判を起こす」「取り立てに行く」などと
+              詐欺サイトはさもユーザーの個人情報を取得したかのように装い、期日内に支払わないと「請求額が高額になる」「身元調査を行う」「裁判を起こす」「取り立てに行く」などと
               脅し文句を並べてきますが、決して動じてはいけません。
               恐怖感や不安感から相手にお金を振り込んだり連絡したりしてしまっては相手の思うツボです。それだけは絶対に避けましょう。<br>
               もしかしたら画面が出てきた時点で不正プログラムをインストールさせられているかもしれないのでセキュリティソフトで確認しましょう。
