--- a/quiz.html
+++ b/quiz.html
@@ -127,8 +127,12 @@
         </div>
 
         <p class="Quiz_title" id="Quiz3">フィッシング詐欺</p>
-        <p class="mondai">どれが偽サイトのページでしょう
-
+        <p class="mondai">ある日突然こんなメールが来ました。最適な行動はどれでしょう。<br>
+          <img src="img/fishing_quiz.png" width="243" height="207"><br>
+          <font size="3">出典：TIME&SPACE<a href="https://time-space.kddi.com/it-technology/20190613/2670"target="_blank">フィッシング詐欺は見破れる？</a><br></font><br><br>
+          A auのカスタマーサポートに連絡する。<br>
+          B 送られてきたメールのURLにアクセスした<br>
+          C 無視する。
         </p>
         <!--解答ボタン-->
         <div class="hidden_box">
@@ -136,19 +140,19 @@
           <input type="checkbox" id="label3-1"/>
           <div class="hidden_show">
             <!--非表示ここから-->
-            <p class="answer">
+            <p answer>
               <!--正解-->
-              正解は... <span class="aomozi"><!--ここに正解となる選択肢--></span>
+              正解は... <span class="aomozi">C<!--ここに正解となる選択肢--></span>
               <br><br>
               <!--正解の解説-->
-
+              こういうたぐいのメールは無視をする。へたに連絡を返したりして個人情報を盗まれるのがよくないので、無視しましょう。
               <br><br>
               <!--他の選択肢の解説-->
-
+              送られてきたURLには絶対にアクセスしないように心がけよう。
               <br><br><br>
               もし不正解だったら... もう一度サイトを読んで学びましょう！
               <br><br>
-              <a href="fishing.html">フィッシング詐欺</a>
+              <a href="Fishing_sagi.html">フィッシング詐欺</a>
             </p>
             <!--ここまで-->
           </div>
