--- a/quiz.html
+++ b/quiz.html
@@ -95,9 +95,9 @@
 
         <p class="Quiz_title" id="Quiz2">アカウント乗っ取り詐欺</p>
         <p class="mondai">次の選択肢の中で最適なパスワードはどれでしょう<br>
-        1.Facebooktarou<br>
-        2.Tarou12345<br>
-        3.taRou0FB
+        A. Facebooktarou<br>
+        B. Tarou12345<br>
+        C. taRou0FB
         </p>
         <!--解答ボタン-->
         <div class="hidden_box">
@@ -107,15 +107,15 @@
             <!--非表示ここから-->
             <p class="answer">
               <!--正解-->
-              正解は... <span class="aomozi">3の選択肢が最適！</span>
+              正解は... <span class="aomozi">C</span>
               <br><br>
               <!--正解の解説-->
-              3番の選択肢はアルファベットの小文字と大文字と数字の3種類が使われていてかつその3種類が複雑に使われているので最も最適だ！<br>
+              Cの選択肢はアルファベットの小文字と大文字と数字の3種類が使われていてかつその3種類が複雑に使われているので最も最適だ！<br>
               もしツイッターのアカウントだったらパスワードの最後の2文字をTWにしたりすることによって簡単で覚えやすく予想されにくいパスワードができるのでこういった工夫をしてSNSを活用しよう。
               <br><br>
               <!--他の選択肢の解説-->
-              1番の選択肢はあまりにもわかりやすすぎるし、数字も混ざっていない。<br>
-              2番の選択肢は大文字、小文字、数字の3種類が混ざってはいるが、肝心の文字列が簡単に想像できてしまうため最適とは言えない。
+              Aの選択肢はあまりにもわかりやすすぎるし、数字も混ざっていない。<br>
+              Bの選択肢は大文字、小文字、数字の3種類が混ざってはいるが、肝心の文字列が簡単に想像できてしまうため最適とは言えない。
 
               <br><br><br>
               もし不正解だったら... もう一度サイトを読んで学びましょう！
@@ -128,8 +128,8 @@
 
         <p class="Quiz_title" id="Quiz3">フィッシング詐欺</p>
         <p class="mondai">ある日突然こんなメールが来ました。最適な行動はどれでしょう。<br>
-          <img src="img/fishing_quiz.png" width="243" height="207"><br>
-          <font size="3">出典：TIME&SPACE<a href="https://time-space.kddi.com/it-technology/20190613/2670"target="_blank">フィッシング詐欺は見破れる？</a><br></font><br><br>
+          <img src="img/fishing_quiz.png" width="607.5" height="517.5"><br>
+          <font size="3">出典：TIME&SPACE　<a href="https://time-space.kddi.com/it-technology/20190613/2670"target="_blank">フィッシング詐欺は見破れる？</a><br></font><br><br>
           A auのカスタマーサポートに連絡する。<br>
           B 送られてきたメールのURLにアクセスした<br>
           C 無視する。
