--- a/quiz.html
+++ b/quiz.html
@@ -128,8 +128,8 @@
 
         <p class="Quiz_title" id="Quiz3">フィッシング詐欺</p>
         <p class="mondai">ある日突然こんなメールが来ました。最適な行動はどれでしょう。<br>
-          <img src="img/fishing_quiz.png" width="607.5" height="517.5"><br>
-          <font size="3">出典：TIME&SPACE　<a href="https://time-space.kddi.com/it-technology/20190613/2670"target="_blank">フィッシング詐欺は見破れる？</a><br></font><br><br>
+          <img src="img/fishing_quiz.jpg" width="960" height="820"><br>
+          <font size="3">出典：TIME&SPACE　<a href="https://time-space.kddi.com/it-technology/20190613/2670"target="_blank">「フィッシング詐欺は見破れる？ 事例や手口、対策や偽サイトの見分け方を解説」</a><br></font><br><br>
           A auのカスタマーサポートに連絡する。<br>
           B 送られてきたメールのURLにアクセスした<br>
           C 無視する。
