--- a/quiz.html
+++ b/quiz.html
@@ -128,11 +128,11 @@
 
         <p class="Quiz_title" id="Quiz3">フィッシング詐欺</p>
         <p class="mondai">ある日突然こんなメールが来ました。最適な行動はどれでしょう。<br>
-          <img src="img/fishing_quiz.jpg" width="960" height="820"><br>
+          <img src="img/fishing_quiz.jpg" width="480" height="410"><br>
           <font size="3">出典：TIME&SPACE　<a href="https://time-space.kddi.com/it-technology/20190613/2670"target="_blank">「フィッシング詐欺は見破れる？ 事例や手口、対策や偽サイトの見分け方を解説」</a><br></font><br><br>
-          A auのカスタマーサポートに連絡する。<br>
-          B 送られてきたメールのURLにアクセスした<br>
-          C 無視する。
+          A. auのカスタマーサポートに連絡する。<br>
+          B. 送られてきたメールのURLにアクセスした<br>
+          C. 無視する。
         </p>
         <!--解答ボタン-->
         <div class="hidden_box">
