--- a/fishing.html
+++ b/fishing.html
@@ -91,7 +91,7 @@
                 </div>
                 <div id="page_top"><a href="#"></a></div>
                 <footer class="site-footer">
-                  <div class="back"> <a href="Sagi.html">戻る</a></div>
+                  <div class="back"> <a href="sagi.html">戻る</a></div>
                   <p class="copyright">@2020 公立はこだて未来大学 暗号とセキュリティ</p>
                 </footer>
               </body>
