--- a/quiz.html
+++ b/quiz.html
@@ -18,12 +18,12 @@
     </head>
     <body>
       <header class="site-header">
-        <h1><a href="sagi.html" class="site-logo"><img src="img/キャプチャ.jpg" alt="暗号とセキュリティ"></a></h1>
-        <nav class="gnav">
-            <ul class="gnav__menu">
-              <li class="gnav__menu__item"><a href="sagi.html" class="btn00">Top</a></li>
-              <li class="gnav__menu__item"><a href="#" class="btn00">セキュリティソフト</a></li>
-              <li class="gnav__menu__item"><a href="#" class="btn00">データベース</a></li>
+        <h1><a href="https://project15-security.github.io/top/top.html" class="site-logo"><img src="img/キャプチャ.jpg" alt="暗号とセキュリティ"></a></h1>
+          <nav class="gnav">
+              <ul class="gnav__menu">
+                <li class="gnav__menu__item"><a href="https://project15-security.github.io/top/top.html" class="btn00">Top</a></li>
+                <li class="gnav__menu__item"><a href="https://project15-security.github.io/soft/soft.html" class="btn00">セキュリティソフト</a></li>
+                <li class="gnav__menu__item"><a href="https://project15-security.github.io/netsagi/sagi.html" class="btn00">ネット詐欺</a></li>
             </ul>
           </nav>
         </header>
