--- a/sagi.html
+++ b/sagi.html
@@ -11,7 +11,7 @@
         gtag('config', 'UA-101406887-1');
       </script> -->
       <meta charset="UTF-8">
-      <title>暗号とセキュリティ</title>
+      <title>インターネット詐欺を知ろう！</title>
       <link href="reset.css" rel="stylesheet" type="text/css">
       <link href="style_sagi.css" rel="stylesheet" type="text/css">
 ​
