--- a/quiz.html
+++ b/quiz.html
@@ -6,7 +6,7 @@
       <script type="text/javascript" src="/Users/b1018086/Desktop/security/fixHeight.js"></script>
 
       <meta charset="UTF-8">
-      <title>暗号とセキュリティ</title>
+      <title>インターネット詐欺を知ろう！</title>
       <link href="reset.css" rel="stylesheet" type="text/css">
       <link href="style_sagi.css" rel="stylesheet" type="text/css">
 ​
