--- a/fishing.html
+++ b/fishing.html
@@ -55,19 +55,23 @@
               <div>
               <p class="maegaki"><span class="koumoku">概要</span><br>
                 有名企業の名前をかたって、<span class="hutomozi">インターネットサービスのログインIDやパスワードを盗む</span>フィッシング詐欺が猛威を振るっています。盗まれたIDやパスワードは闇市場で売買されており、<span class="hutomozi">他ネット犯罪に使われ金銭被害</span>の発生にもつながっています。
-
                 <br><br>
                   <span class="koumoku">手口</span><br>
-                  <span class="hutomozi">金融機関などの有名企業を装った電子メール</span>に、「アカウント更新のため」などとして電子メール内に書かれているURLをクリックさせ、表示された偽のWebサイトに口座番号などのID、パスワードなどを入力させ、個人情報を取得するというものです。
+                  フィッシング詐欺の多くは<span class="hutomozi">「フィッシングメール」</span>と呼ばれるメールを悪用して行われます。メールを受信したユーザーを<span class="hutomozi">フィッシングサイト</span>に誘導し、<span class="hutomozi">クレジットカード</span>や<span class="hutomozi">ネットバンクなどの情報を</span>入力させようとします。
+                  フィッシングメールの文章は今すぐ何とかしないといけないと思わせるような、人間の心理を利用した文面が使われています。
+                  最近では<span class="hutomozi">スマートフォンのメールに特化したもの</span>や、<span class="hutomozi">facebook</span>や<span class="hutomozi">LINE</span>などのSNSの<span class="hutomozi">メッセージ機能を悪用したケース</span>も確認されています。
                   <br><br>
                   <span class="koumoku">対策</span><br>
-                  有名企業からのメールには注意しよう。
+                  <span class="hutomozi">フィッシング詐欺を見抜くポイント</span>は受信した不審なメールをよく<span class="hutomozi">確認する</span>ことです。お金を支払わせるようなメールを受信したときには落ち着いて<span class="hutomozi">メールの中身やリンク先をよく見て</span>みましょう。<br>
+                  リンク先のページで名前や住所などの<span class="hutomozi">個人情報</span>の入力が求められていたら要注意です。そもそも正規のWebサービスではメールを使って別ページにアクセスさせて個人情報の入力を求めるケースは非常にまれです。
+                  また個人情報だけでなく、<span class="hutomozi">クレジットカードの番号</span>や<span class="hutomozi">パスワードなどの入力</span>が求められたら、まず怪しいと疑った方が良いでしょう。<br>
+                  もしフィッシング詐欺に遭ったり、フィッシング詐欺と思われる不審なメールを受信したりしたら、被害の発生に関わらず、警察庁の<span class="hutomozi">「フィッシング110番」</span>や<span class="hutomozi">「フィッシング対策協議会」</span>に通報して情報提供しましょう。
                   <br><br>
                   <img src="img/fishing.gif" width="520" height="410" alt=""><br>
-                  <font size="3">出典:JAバンク　<a href="https://www.jabank.org/attention/phishing/" target="_blank">「フィッシング詐欺にご注意ください」</a></font><br><br>
+                  <font size="3">出典:JAバンク<a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.jabank.org%2Fattention%2Fphishing%2F&psig=AOvVaw2cbLrh-LglhzUpmjCBDdRr&ust=1603524166344000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCLjUq4OfyuwCFQAAAAAdAAAAABAR"target="_blank">「フィッシング詐欺にご注意ください」</a></font><br><br>
                     <br><br>
                     <span class="koumoku">実際に起きた事件</span><br>
-                Yahoo!ニュース：<a href ="https://news.yahoo.co.jp/byline/ohmototakashi/20191025-00148216/" target="_blank">「大手金融機関を装う、フィッシング詐欺が急増。9月は前月比4倍の事犯発生。」</a>
+                <a href ="https://news.yahoo.co.jp/byline/ohmototakashi/20191025-00148216/" target="_blank">大手金融機関を装うフィッシング詐欺</a><br>
                   </p></div>
 
                   <div id="menu3">
