--- a/quiz.html
+++ b/quiz.html
@@ -95,7 +95,7 @@
 
         <p class="Quiz_title" id="Quiz2">アカウント乗っ取り詐欺</p>
         <p class="mondai">次の選択肢の中で最適なパスワードはどれでしょう<br>
-        A. Facebooktarou<br>
+        A. facebooktarou<br>
         B. Tarou12345<br>
         C. taRou0FB
         </p>
@@ -110,13 +110,10 @@
               正解は... <span class="aomozi">C</span>
               <br><br>
               <!--正解の解説-->
-              Cの選択肢はアルファベットの小文字と大文字と数字の3種類が使われていてかつその3種類が複雑に使われているので最も最適だ！<br>
-              もしツイッターのアカウントだったらパスワードの最後の2文字をTWにしたりすることによって簡単で覚えやすく予想されにくいパスワードができるのでこういった工夫をしてSNSを活用しよう。
+              パスワードには、Cのように<span class="akamozi">アルファベットの小文字、大文字、数字の3種類が使われており、かつその3種類が複雑に使われているもの</span>が最も最適と言えます。ツイッターのアカウントはパスワードの最後の2文字をTWにするなど、覚えやすさを維持しながら使いまわさない工夫をするとより安全です。
               <br><br>
               <!--他の選択肢の解説-->
-              Aの選択肢はあまりにもわかりやすすぎるし、数字も混ざっていない。<br>
-              Bの選択肢は大文字、小文字、数字の3種類が混ざってはいるが、肝心の文字列が簡単に想像できてしまうため最適とは言えない。
-
+              Aはあまりにも分かりやすく、小文字しか使用していないため安全性は低い。Bは大文字、小文字、数字の3種類が混ざってはいるものの、<span class="hutomozi">文字列が簡単に予想できてしまう</span>ため最適とは言えない。
               <br><br><br>
               もし不正解だったら... もう一度サイトを読んで学びましょう！
               <br><br>
@@ -130,9 +127,9 @@
         <p class="mondai">ある日突然こんなメールが来ました。最適な行動はどれでしょう。<br>
           <img src="img/fishing_quiz.jpg" width="480" height="410"><br>
           <font size="3">出典：TIME&SPACE　<a href="https://time-space.kddi.com/it-technology/20190613/2670"target="_blank">「フィッシング詐欺は見破れる？ 事例や手口、対策や偽サイトの見分け方を解説」</a><br></font><br><br>
-          A. auのカスタマーサポートに連絡する。<br>
-          B. 送られてきたメールのURLにアクセスした<br>
-          C. 無視する。
+          A. auのカスタマーサポートに連絡する<br>
+          B. 送られてきたメールのURLにアクセスする<br>
+          C. 無視する
         </p>
         <!--解答ボタン-->
         <div class="hidden_box">
@@ -145,10 +142,10 @@
               正解は... <span class="aomozi">C<!--ここに正解となる選択肢--></span>
               <br><br>
               <!--正解の解説-->
-              こういうたぐいのメールは無視をする。へたに連絡を返したりして個人情報を盗まれるのがよくないので、無視しましょう。
+              このような類のメールは無視しましょう。へたに連絡を返すと個人情報を盗まれる可能性があるので、無視が得策です。
               <br><br>
               <!--他の選択肢の解説-->
-              送られてきたURLには絶対にアクセスしないように心がけよう。
+              Aは間違いではありませんが、サポートセンターの電話番号が偽りである可能性もあるので、メールに記載された番号からかけるのは辞めましょう。Bは最もやってはいけない行為です。身に覚えのないURLは安易にアクセスしないように心がけましょう。
               <br><br><br>
               もし不正解だったら... もう一度サイトを読んで学びましょう！
               <br><br>
@@ -209,12 +206,12 @@
               正解は... <span class="aomozi">B</span>
               <br><br>
               <!--正解の解説-->
-              偽警告をクリックすると不審なサイトやソフトに繋がる危険性があるため、ブラウザごと（もしくはブラウザのタブごと）終了しましょう。
+              偽警告をクリックすると不審なサイトやソフトに繋がる危険性があるため、<span class="hutomozi">ブラウザごと（もしくはブラウザのタブごと）終了</span>しましょう。
               <br><br>
               <!--他の選択肢の解説-->
               Aのように画面の指示に従うと、詐欺犯罪者グループがインストールさせようとしているソフトを指示通りインストールしてしまうため適しません。
               また、Dも詐欺犯罪者グループの電話に繋がる危険性があり、電話越しでの指示に従わされたり、電話番号が流出する被害に遭ってしまいます。
-              Cは、これで問題ない場合もありますが、偽警告の中にはURL等に関係なく画面内をクリックしただけでアクションを起こすものもあるので、Bの方が適しています。
+              Cは、これで問題ない場合もありますが、<span class="hutomozi">偽警告の中にはURL等に関係なく画面内をクリックしただけでアクションを起こすものもある</span>ので、Bの方が適しています。
               <br><br><br>
               もし不正解だったら... もう一度サイトを読んで学びましょう！
               <br><br>
@@ -245,7 +242,7 @@
               <br><br>
               <!--他の選択肢の解説-->
               Bは、偽警告の画面には怪しいソフトのインストールを推奨するボタンやURLなどがあるため、指示に従うと詐欺犯罪者グループの意のままに行動してしまう恐れがあります。
-              Cは、偽警告のプログラムはグレーウェア（不利益をもたらすが不正とは言い切れないもの）に分類される場合があるので、安心しきっているのは危険です。
+                Cは、偽警告のプログラムは<span class="akamozi">グレーウェア（不利益をもたらすが不正とは言い切れないもの）に分類される場合がある</span>ので、安心しきっているのは危険です。
               <br><br><br>
               もし不正解だったら... もう一度サイトを読んで学びましょう！
               <br><br>
@@ -270,18 +267,17 @@
           <input type="checkbox" id="label6-1"/>
           <div class="hidden_show">
             <!--非表示ここから-->
-            <p answer>
+            <p class="answer">
               <!--正解-->
               正解は... <span class="aomozi">C</span>
               <br><br>
               <!--正解の解説-->
-              詐欺サイトはさもユーザーの個人情報を取得したかのように装い、期日内に支払わないと「請求額が高額になる」「身元調査を行う」「裁判を起こす」「取り立てに行く」などと
-              脅し文句を並べてきますが、決して動じてはいけません。
-              恐怖感や不安感から相手にお金を振り込んだり連絡したりしてしまっては相手の思うツボです。それだけは絶対に避けましょう。<br>
-              もしかしたら画面が出てきた時点で不正プログラムをインストールさせられているかもしれないのでセキュリティソフトで確認しましょう。
+              詐欺サイトはさもユーザーの個人情報を取得したかのように装い、期日内に支払わないと「請求額が高額になる」「身元調査を行う」「裁判を起こす」「取り立てに行く」などと脅し文句を並べてきますが、決して動じてはいけません。
+              <span class="hutomozi">恐怖感や不安感から相手にお金を振り込んだり連絡したりしてしまっては相手の思うツボ</span>なので、相手にせず、履歴も消去して無かったことにしておくのが最適です。<br>
+              また、画面が出てきた時点で不正なプログラムをインストールさせられている可能性があるので、<span class="hutomozi">引っかかったと思ったらセキュリティソフトで確認することをオススメ</span>します。
               <br><br>
               <!--他の選択肢の解説-->
-              こちらから下手に連絡させしなければ相手としても打つ手がなくなるので、確認の電話をかけてみたり、恐怖心にとらわれずに落ち着いた行動を心がけましょう。
+              AやBなど、詐欺グループに繋がってしまうような行為はしてはいけません。こちらから連絡しなければ相手も打つ手はないので、恐怖心にとらわれずに落ち着いた行動を心がけましょう。
               <br><br><br>
               もし不正解だったら... もう一度サイトを読んで学びましょう！
               <br><br>
@@ -344,8 +340,8 @@
               正解は... <span class="aomozi">C</span>
               <br><br>
               <!--正解の解説-->
-              法律で「荷物を受け取ってから14日間が経過したら、受け取った側が自由に処分できる」と定められています。そのため14日間は使わずに放置しておきましょう。
-              また、14日間の経過を証明するために、写真を取ったりSNSに上げることは有効な手段になり得ます。
+              法律で<span class="akamozi">「荷物を受け取ってから14日間が経過したら、受け取った側が自由に処分できる」</span>と定められています。そのため14日間は使わずに放置しておきましょう。
+              また、<span class="hutomozi">14日間の経過を証明するために、写真を取ったりSNSに上げることは有効な手段</span>になり得ます。
               <br><br>
               <!--他の選択肢の解説-->
               Aのように14日間の経過を待たずに使ってしまうと、後から高額な請求書が届いたときに自分が不利な立場になってしまいます。万が一払ってしまったときは、「188」（消費者ホットライン）に電話しましょう。
