--- a/ransomware.html
+++ b/ransomware.html
@@ -93,7 +93,7 @@
               <div id="page_top"><a href="#"></a></div>
               <footer class="site-footer">
                 <div class="back"> <a href="sagi.html">戻る</a></div>
-                <p class="copyright">@2020 公立はこだて未来大学 暗号とセキュリティ</p>
+                <p class="copyright">©2020 公立はこだて未来大学 暗号とセキュリティ</p>
               </footer>
             </body>
             </html>
